tests/parser/command_form/test_05.m.out
In test_05.m, line 4
|   cd ../foo
|      ^^^^^^ error: expected NEWLINE, found DIRECTORY instead
MISS_HIT Summary: 1 file(s) analysed, 1 error(s)
