tests/parser/command_form/test_05.m
% (c) Copyright 2019 Florian Schanda

function test_05()
  cd ../foo
end
